my next target completed successfully

--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@
           <img src="images/html.png" alt="">
           <h2>HTML</h2>
           <p>My 100% proficiency in HTML, forming a strong foundation for my web development journey, aiming to master additional skills.</p>
-          <a href="#">Learn More</a>
+          <a href="#" class="learn-more-style">Learn More</a>
         </div>
         <div class="card-item2">
           <img src="images/css.png" alt="">
           <h2>CSS</h2>
           <p>My proficiency in HTML and CSS, building a solid foundation for creating modern and responsive web designs.I try my best.I hope i will do it</p>
-          <a href="#">Learn More</a>
+          <a href="#" class="learn-more-style" >Learn More</a>
         </div>
         <div class="card-item3">
           <img src="images/js.png" alt="">
           <h2>JavaScript</h2>
           <p>I am learning JavaScript to expand my web development skills, aiming to create dynamic and interactive features for modern websites.</p>
-          <a href="#">Learn More</a>
+          <a href="#"class="learn-more-style" >Learn More</a>
         </div>
         </div>
        </section>
@@ -135,9 +135,51 @@
 
       <!-- current target section ends hare -->
        <!-- next-target-section start hare -->
+        <section id="next-target-section">
+          <div class="next-target-title">
+            <h2>My Next Target</h2>
+            <p>My next goal is to learn React, Node.js, and MongoDB to enhance my web development expertise, focusing on building scalable and efficient applications.</p>
+          </div>
+          <div class="recat-skill">
+            <img src="images/react.png" alt="">
+            <div class="recat-skill-description">
+              <h2>ReactJS</h2>
+              <p>React.js is a popular JavaScript library for building user interfaces. It allows developers to create interactive UI components efficiently, using a component-based architecture that promotes reusability and scalability in web applications.</p>
+              <a href="#" class="learn-more-style" >Learn More</a>
+            </div>
+          </div>
+          <div class="node-skill">
+            <div class="recat-skill">
+            <img src="images/nodejs.png" alt="">
+            <div class="recat-skill-description">
+              <h2>NodeJs</h2>
+              <p>Node.js is a runtime environment that allows developers to run JavaScript on the server-side. It's known for its event-driven, non-blocking I/O model, making it efficient for building scalable and fast network applications.</p>
+              <a href="#" class="learn-more-style" >Learn More</a>
+            </div>
+          </div>
 
-       
+          </div>
+          <div class="mongoj-skill">
+            <div class="recat-skill">
+            <img src="images/mongodb.png" alt="">
+            <div class="recat-skill-description">
+              <h2>MongoDB</h2>
+              <p>MongoDB is a NoSQL database known for its flexibility and scalability. It stores data in JSON-like documents, making it easy to work with for developers and suitable for a wide range of applications.</p>
+              <a href="#" class="learn-more-style" >Learn More</a>
+            </div>
+          </div>
+          </div>
+        </section>
+
+
        <!-- next-target-section ends hare -->
+        <!-- feedback section start hare -->
+         <section id="feedback-section">
+          
+         </section>
+
+
+        <!-- feedback section ends hare -->
 
   </main>
 <footer>
