feedback section completed successfull

--- a/index.html
+++ b/index.html
@@ -175,7 +175,14 @@
        <!-- next-target-section ends hare -->
         <!-- feedback section start hare -->
          <section id="feedback-section">
-          
+          <div class="feedback-section-content">
+            <h2>I need Support</h2>
+            <p>I seeks support to develop my skills remotely, striving to deliver exceptional service and excel in my chosen field of web development.</p>
+            <div class="message-box">
+              <input type="text" name="text" id="message"placeholder="Suggest me any feedback for me">
+           <button type="submit" class="feedback-button">Submit</button>
+            </div>
+          </div>
          </section>
 
 
