successfully completed footer section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Website</title>
+  <!-- font awasome cdn -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,7 +24,10 @@
       <h2>"In the near future, I hope to become a  Developer."</h2>
       <p>In the near future, you aspire to transition into a developer role. With a background in travel blogging and web development, your journey towards becoming a developer promises to blend creativity with technical expertise, fostering innovative solutions and enhancing user experiences across digital platforms.</p>
 
-      <button class="contact-button" type="button">Contact with me</button>
+      <a href="#footer-section"> <button class="contact-button" type="button">Contact with me</button>
+
+      </a>
+
     </div>
      </section>
 
@@ -190,6 +195,23 @@
 
   </main>
 <footer>
+  <section id="footer-section">
+    <p> &copy; All Right Reserved Mohammad Rayhan</p>
+    <div class="contact-information">
+
+        <button class="btn" onclick="window.open('https://www.facebook.com/rs.rayhan.18/')"class="btn request-callback"><i class="fa-brands fa-square-facebook" style="color: #0F90F2;"></i> </button>
+    
+        <button class="btn" onclick="window.open('https://www.instagram.com/')" class="btn request-callback"> <i class="fa-brands fa-square-instagram" style="color: #F33D02;"></i> </button>
+        <button class="btn" onclick="window.open('https://www.twitter.com/')" class="btn request-callback"><i class="fa-brands fa-twitter" style="color: #1DA1F2;"></i> </button>
+        <button class="btn" onclick="window.open('https://www.linkedin.com/in/md-rayhan-mia-927115220/')" class="btn request-callback"><i class="fa-brands fa-linkedin" style="color: #0077B5;"></i></button>
+
+        <button class="btn" onclick="window.open('https://github.com/MohammadRayhan190720')" class="btn request-callback"><i class="fa-brands fa-github"style="color: #000000;"></i></button>
+
+
+
+    </div>
+
+  </section>
 
 </footer>  
 </body>
